--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     </link>
     <title>webpack-for-react</title>
+    <style>
+       #root {
+           height: 100%;
+       }
+    </style>
 </head>
 
 <body>
