implemented landing page and pomodoro modal design

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
        #root {
            height: 100%;
        }
+       body {
+           background-image: url("./public/martin-adams-pTCcJSBOTxY-unsplash.jpg");
+       }
     </style>
 </head>
 
