--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     </link>
     <title>webpack-for-react</title>
@@ -13,7 +14,7 @@
            height: 100%;
        }
        body {
-           background-image: url("./martin-adams-pTCcJSBOTxY-unsplash.jpg");
+           background-image: url("./public/martin-adams-pTCcJSBOTxY-unsplash.jpg");
        }
     </style>
 </head>
